--- a/Vocabulary/Authorization.xaml
+++ b/Vocabulary/Authorization.xaml
@@ -7,6 +7,29 @@
         mc:Ignorable="d"
         WindowStartupLocation="CenterScreen"
         x:Name ="AuthorizationWindow" Title="Authorization" Height="300" Width="350" Closed="AuthorizationWindow_Closed">
+    <Window.Resources>
+        <Style TargetType="Button">
+            <Setter Property="VerticalAlignment" Value="Center" />
+            <Setter Property="HorizontalAlignment" Value="Center" />
+            <Setter Property="FontFamily" Value="Engravers MT" />
+            <Setter Property="Foreground" Value="#FF0D2D95" />
+            <Setter Property="Background" Value="{x:Null}" />
+            <Setter Property="BorderThickness" Value="0" />
+            <Setter Property="Padding" Value="0" />
+        </Style>
+        <Style TargetType="TextBox">
+            <Setter Property="HorizontalAlignment" Value="Left" />
+            <Setter Property="Width" Value="170" />
+            <Setter Property="Padding" Value="3" />
+        </Style>
+        <Style TargetType="Label">
+            <Setter Property="FontSize" Value="10" />
+            <Setter Property="FontFamily" Value="Engravers MT" />
+            <Setter Property="Foreground" Value="#FF1B25C0" />
+            <Setter Property="HorizontalAlignment" Value="Left" />
+        </Style>
+    </Window.Resources>
+
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="0.35*"/>
@@ -32,14 +55,7 @@
        HorizontalAlignment="Center" VerticalAlignment="Center" Margin="10"/>-->
 
         <TextBlock x:Name="TextBlockAuto"  Grid.Row="0" Grid.ColumnSpan="2" Text="Log in into your account" TextWrapping="Wrap"  FontSize="20" FontFamily="Engravers MT" Foreground="#FF0D31A3" HorizontalAlignment="Center" VerticalAlignment="Bottom" TextAlignment="Center" />
-        <!--<Expander x:Name="AddWordsExpander" Panel.ZIndex="1" Grid.Row="1" Grid.ColumnSpan="2" Header="Click to add words" ToolTip="Click to add to your account the most used words to study" VerticalAlignment="Bottom" HorizontalAlignment="Center" ExpandDirection="Up" Background="#FF94C6F7"  >
-            <StackPanel>
-                <Label FontWeight="Bold" Content="Chose which words your wont add" HorizontalAlignment="Left" />
-                <CheckBox Content="Thousand of the most used English words" IsChecked="True"/>
-                <CheckBox Content="The second thousand most used English words"/>
-                <CheckBox Content="The third thousand most used English words"/>
-            </StackPanel>
-        </Expander>-->
+        
         <Grid Panel.ZIndex="0" Grid.Row="1" Grid.ColumnSpan="2" Margin="50,0,0,0">
             <Grid.RowDefinitions>
                 <RowDefinition Height="*"/>
@@ -51,27 +67,27 @@
                 <ColumnDefinition Width="*"/>
             </Grid.ColumnDefinitions>
 
-            <Label Grid.Row="0" Grid.Column="0" Content="Enter _username:" Target="{Binding ElementName=UserNameTextBox}" FontSize="10" FontFamily="Engravers MT" Foreground="#FF1B25C0" HorizontalAlignment="Left" VerticalAlignment="Bottom"/>
-            <TextBox Grid.Row="0" Grid.Column="1"  Text="" Name="UserNameTextBox" Width="170" Padding="3" HorizontalAlignment="Left" VerticalAlignment="Bottom" />
+            <Label Grid.Row="0" Grid.Column="0" Content="Enter _username:" Target="{Binding ElementName=UserNameTextBox}" VerticalAlignment="Bottom"/>
+            <TextBox Grid.Row="0" Grid.Column="1"  Text="" Name="UserNameTextBox" VerticalAlignment="Bottom" />
 
-            <Label Grid.Row="2" Grid.Column="0" Name="UserPasswordLabel" Content="Enter _password:" Target="{Binding ElementName=UserPasswordTextBox}" FontSize="10" FontFamily="Engravers MT" Foreground="#FF1B25C0" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+            <Label Grid.Row="2" Grid.Column="0" Name="UserPasswordLabel" Content="Enter _password:" Target="{Binding ElementName=UserPasswordTextBox}" VerticalAlignment="Top"/>
             <PasswordBox Grid.Row="2" Grid.Column="1"  x:Name="UserPasswordBox" Width="170" Padding="3" HorizontalAlignment="Left" VerticalAlignment="Top"  />
             <!--<TextBox Grid.Row="1" x:Name="UserPasswordTextBox" Padding="5" Text="Enter your password" Foreground="Gray" GotFocus="UserPasswordTextBox_GotFocus" LostFocus="UserPasswordTextBox_LostFocus" HorizontalAlignment="Left" VerticalAlignment="Top" />-->
             <!--<RadioButton Grid.Row="1" Content="Show password" Checked="RadioButton_Checked" Unchecked="RadioButton_Unchecked" VerticalAlignment="Bottom"/>-->
 
-            <Label Grid.Row="1" Grid.Column="0"  Name="UserEmailLabel" Content="Enter your _email:" Target="{Binding ElementName=UserEmailTextBox}" FontSize="10" FontFamily="Engravers MT" Foreground="#FF1B25C0" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-            <TextBox Grid.Row="1" Grid.Column="1"  x:Name="UserEmailTextBox" Text="" Width="170" Padding="3" HorizontalAlignment="Left" VerticalAlignment="Center" />
+            <Label Grid.Row="1" Grid.Column="0"  Name="UserEmailLabel" Content="Enter your _email:" Target="{Binding ElementName=UserEmailTextBox}" VerticalAlignment="Center"/>
+            <TextBox Grid.Row="1" Grid.Column="1"  x:Name="UserEmailTextBox" Text="" VerticalAlignment="Center" />
 
 
         </Grid>
 
-        <Button Grid.Row="2" Grid.ColumnSpan="2" Name="LogIn" Content="Log in" Click="LogIn_Click" FontSize="18" FontFamily="Engravers MT" Width="150" Height="40" Background="#4CAF50" Foreground="White" HorizontalAlignment="Center" VerticalAlignment="Center"/>
-        <Button Grid.Row="2" Grid.ColumnSpan="2" Name="SignUp" Content="Sign Up" Click="SignUp_Click" FontSize="18" FontFamily="Engravers MT" Width="150" Height="40" Background="#4CAF50" Foreground="White" HorizontalAlignment="Center" VerticalAlignment="Center" Visibility="Hidden"/>
-        <Button Grid.Row="2" Grid.ColumnSpan="2" Name="ResetPassword" Content="Reset Password" Click="ResetPassword_Click" FontSize="18" FontFamily="Engravers MT" Width="150" Height="40" Background="#4CAF50" Foreground="White" HorizontalAlignment="Center" VerticalAlignment="Center" Visibility="Hidden"/>
+        <Button Grid.Row="2" Grid.ColumnSpan="2" Name="LogIn" Content="Log in" Click="LogIn_Click" FontSize="18" Width="150" Height="40" Background="#4CAF50" Foreground="White" />
+        <Button Grid.Row="2" Grid.ColumnSpan="2" Name="SignUp" Content="Sign Up" Click="SignUp_Click" FontSize="18" Width="150" Height="40" Background="#4CAF50" Foreground="White" Visibility="Hidden"/>
+        <Button Grid.Row="2" Grid.ColumnSpan="2" Name="ResetPassword" Content="Reset Password" Click="ResetPassword_Click" FontSize="18" Width="150" Height="40" Background="#4CAF50" Foreground="White"  Visibility="Hidden"/>
 
-        <Button Grid.Row="3" Grid.Column="0" Name="NoAccount"  Content="Don't have an account yet?" Click="NoAccount_Click"  Foreground="#FF0D2D95" VerticalAlignment="Center" HorizontalAlignment="Left" BorderThickness="0" Background="{x:Null}" Margin="10,0,0,0" />
-        <Button Grid.Row="3" Grid.ColumnSpan="2" Name="HaveAccount" Content="Have an account already?" Click="HaveAccount_Click" Foreground="#FF0D2D95" VerticalAlignment="Center" HorizontalAlignment="Center" BorderThickness="0" Background="{x:Null}" Visibility="Hidden" />
-        <Button Grid.Row="3" Grid.Column="1" Name="ForgotPassword" Click="ForgotPassword_Click" Content="Forgot your password?"  Foreground="#FF0D2D95" VerticalAlignment="Center" HorizontalAlignment="Right" BorderThickness="0" Background="{x:Null}" Margin="0,0,10,0" />
+        <Button Grid.Row="3" Grid.Column="0" Name="NoAccount"  Content="Don't have an account yet?" Click="NoAccount_Click" Margin="10,0,0,0" />
+        <Button Grid.Row="3" Grid.ColumnSpan="2" Name="HaveAccount" Content="Have an account already?" Click="HaveAccount_Click" Visibility="Hidden" />
+        <Button Grid.Row="3" Grid.Column="1" Name="ForgotPassword" Click="ForgotPassword_Click" Content="Forgot your password?" Margin="0,0,10,0" />
 
     </Grid>
 </Window>
