--- a/Vocabulary/LearningWords.xaml
+++ b/Vocabulary/LearningWords.xaml
@@ -8,6 +8,19 @@
         mc:Ignorable="d"
         WindowStartupLocation="CenterScreen"
         x:Name="LearningWordsWindow"  Title="Learning Words" Height="400" Width="500" Loaded="Window_Loaded" Closed="Window_Closed">
+    <Window.Resources>
+        <Style TargetType="Button">
+            <Setter Property="VerticalAlignment" Value="Center" />
+            <Setter Property="HorizontalAlignment" Value="Center" />
+            <Setter Property="FontFamily" Value="Engravers MT" />
+            <Setter Property="FontSize" Value="40" />
+            <Setter Property="Foreground" Value="#FF53D8A2" />
+            <Setter Property="Background" Value="{x:Null}" />
+            <Setter Property="BorderThickness" Value="0" />
+            <Setter Property="Padding" Value="0" />
+        </Style>
+    </Window.Resources>
+    
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="*"/>
@@ -30,9 +43,9 @@
                 <ColumnDefinition Width="*" />
             </Grid.ColumnDefinitions>
 
-            <Button Grid.Column="0" x:Name="Previous" Content="&#x2190;" Click="Previous_Click" FontSize="40" FontFamily="Segoe UI Symbol" Background="{x:Null}" Foreground="#FF53D8A2" BorderThickness="0,0,0,0" HorizontalAlignment="Center" VerticalAlignment="Center" />
-            <Button Grid.Column="1" x:Name="ChangeStatus" Content="Mark as learned" Click="ChangeStatus_Click" FontSize="24" FontFamily="Engravers MT" Background="{x:Null}" Foreground="#FF53D8A2" BorderThickness="0,0,0,0" HorizontalAlignment="Center" VerticalAlignment="Center" />
-            <Button Grid.Column="2" x:Name="Next" Content="&#x2192;" Click="Next_Click" FontSize="40" FontFamily="Segoe UI Symbol" Background="{x:Null}" Foreground="#FF53D8A2" BorderThickness="0,0,0,0" HorizontalAlignment="Center" VerticalAlignment="Center" />
+            <Button Grid.Column="0" x:Name="Previous" Content="&#x2190;" Click="Previous_Click" />
+            <Button Grid.Column="1" x:Name="ChangeStatus" Content="Mark as learned" Click="ChangeStatus_Click" FontSize="24" />
+            <Button Grid.Column="2" x:Name="Next" Content="&#x2192;" Click="Next_Click" />
 
         </Grid>
                 
