--- a/Vocabulary/ShowWordUC.xaml
+++ b/Vocabulary/ShowWordUC.xaml
@@ -6,6 +6,22 @@
              xmlns:local="clr-namespace:Vocabulary"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="500">
+    
+    <UserControl.Resources>
+        <Style TargetType="RadioButton">
+            <Setter Property="VerticalContentAlignment" Value="Center" />
+            <Setter Property="Foreground" Value="#FF93510E" />
+        </Style>
+        <Style TargetType="TextBlock">
+            <Setter Property="VerticalAlignment" Value="Center" />
+            <Setter Property="HorizontalAlignment" Value="Center" />
+            <Setter Property="FontFamily" Value="Engravers MT" />
+            <Setter Property="Foreground" Value="#FFCB6C0E" />
+            <Setter Property="TextWrapping" Value="Wrap" />
+            <Setter Property="TextAlignment" Value="Center" />
+        </Style>
+    </UserControl.Resources>
+    
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="*"/>
@@ -15,24 +31,23 @@
 
         <Expander x:Name="expander" Panel.ZIndex="1">
             <StackPanel HorizontalAlignment="Left" VerticalAlignment="Top">
-                <RadioButton x:Name="rBAll" Content="All words" Checked="RadioButton_Checked" VerticalContentAlignment="Center" IsChecked="True"/>
-                <RadioButton x:Name="rBMy" Content="5 words" Checked="RadioButton_Checked" VerticalContentAlignment="Center" />
-                <RadioButton x:Name="rBUser" Checked="RadioButton_Checked" VerticalContentAlignment="Center" >
+                <RadioButton x:Name="rBAll" Content="All words" Checked="RadioButton_Checked" IsChecked="True"/>
+                <RadioButton x:Name="rBMy" Content="5 words" Checked="RadioButton_Checked" />
+                <RadioButton x:Name="rBUser" Checked="RadioButton_Checked">
                     <StackPanel Orientation="Horizontal">
-                        <TextBox x:Name="rBTextUser" Text="20" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Width="30" />
-                        <TextBlock Text=" words" VerticalAlignment="Center" />
+                        <TextBox x:Name="rBTextUser" Text="20" Foreground="#FF93510E" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Width="30" />
+                        <TextBlock Text=" words" Foreground="#FF93510E"/>
                     </StackPanel>
                 </RadioButton>
             </StackPanel>
         </Expander>
         
         <ProgressBar Name="progressBarStatus" Minimum="0" Maximum="100" Value="70"  Height="20" Background="{x:Null}" Foreground="#ffffcc" BorderBrush="{x:Null}" VerticalAlignment="Top" />
-        <TextBlock Text="{Binding ElementName=progressBarStatus, Path=Value, StringFormat={}{0:0}%}" Foreground="#FFAC750E" FontSize="16" HorizontalAlignment="Center" VerticalAlignment="Top" />
+        <TextBlock Text="{Binding ElementName=progressBarStatus, Path=Value, StringFormat={}{0:0}%}" Foreground="#FFAC750E" FontSize="16" VerticalAlignment="Top" />
 
-        <TextBlock Grid.Row="0" x:Name="textBlockEnglish" Text="Get ready!" TextWrapping="Wrap" TextAlignment="Center" FontSize="34" FontFamily="Engravers MT" Foreground="#FFCB6C0E" VerticalAlignment="Bottom" HorizontalAlignment="Center"/>
-        <TextBlock Grid.Row="1" x:Name="textBlockUkrainian" Text="" TextWrapping="Wrap" TextAlignment="Center" FontSize="26" FontFamily="Engravers MT" Foreground="#FFCB9E0E" VerticalAlignment="Center" HorizontalAlignment="Center"/>
-        <TextBlock Grid.Row="2" x:Name="textBlockTranscription" Text="Press 'Next' and start working!" TextWrapping="Wrap" TextAlignment="Center" FontSize="24" FontFamily="Engravers MT" Foreground="#FFF47689" VerticalAlignment="Top" HorizontalAlignment="Center"/>
-
+        <TextBlock Grid.Row="0" x:Name="textBlockEnglish" Text="Get ready!" FontSize="34" VerticalAlignment="Bottom"/>
+        <TextBlock Grid.Row="1" x:Name="textBlockUkrainian" Text="" FontSize="26" Foreground="#FFCB9E0E" />
+        <TextBlock Grid.Row="2" x:Name="textBlockTranscription" Text="Press 'Next' and start working!" FontSize="24" Foreground="#FFF47689" VerticalAlignment="Top"/>
 
     </Grid>
 </UserControl>
