Created pages for user authentication and word list viewing on the web version

--- a/VocabularyWeb/Components/Pages/Home.razor
+++ b/VocabularyWeb/Components/Pages/Home.razor
@@ -2,6 +2,11 @@
 
 <PageTitle>Home</PageTitle>
 
-<h1>Hello, world!</h1>
+<h1>My Vocabulary!</h1>
 
-Welcome to your new app.
+ My Vocabulary offers an ideal tool for learning words at any level. 
+ 
+ We provide a convenient and effective way to enhance your vocabulary. 
+ With our wide range of exercises, tests, and interactive language-learning tasks, mastering a language becomes an engaging and straightforward process. 
+ 
+ Join our community and expand your language skills with My Vocabulary!
