--- a/VocabularyWeb/Components/Layout/NavMenu.razor
+++ b/VocabularyWeb/Components/Layout/NavMenu.razor
@@ -12,17 +12,17 @@
             <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
                 <span class="bi bi-house-door-fill-nav-menu" aria-hidden="true"></span> Home
             </NavLink>
-        </div>
+        </div>       
 
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="counter">
-                <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Counter
+            <NavLink class="nav-link" href="ListOfMyWords">
+                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> List of My Words
             </NavLink>
         </div>
 
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="weather">
-                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Weather
+            <NavLink class="nav-link" href="Exercises">
+                <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Exercises
             </NavLink>
         </div>
     </nav>
